# django-compositepk-model

./: .coveragerc  .gitignore  .pre-commit-config.yaml  MANIFEST.in  README.md  pyproject.toml  setup.cfg  tox.ini
cpkmodel/: __init__.py  collector.py  compositekey.py  constants.py  cpkmodel.py  cpkquery.py
