[bumpversion]
current_version = 2.0.0.dev1
parse = (?P<major>\d+)\.(?P<minor>\d+)\.(?P<patch>\d+)(\.?)(?P<release>[a-z]*)(?P<relver>\d*)
serialize =
	{major}.{minor}.{patch}.{release}{relver}
	{major}.{minor}.{patch}
commit = True
tag = True
sign_tags = True
tag_name = {new_version}
message = Release {new_version}

[bumpversion:part:release]
optional_value = gamma
values =
	dev
	a
	b
	rc
	gamma

[bumpversion:file:cpkmodel/__init__.py]

[metadata]
name = django-compositepk-model
version = attr: cpkmodel.__version__
author = Arisophy
description = Extended Django Model class with composite-primary-key support
long_description = file: README.md
long_description_content_type = text/x-markdown
license = MIT
license_file = LICENSE
classifiers =
	License :: OSI Approved :: MIT License
	Development Status :: Development Status :: 5 - Production/Stable
	Framework :: Django
	Programming Language :: Python
	Programming Language :: Python :: 3

[options]
include_package_data = True
packages = cpkmodel
python_requires = >=3.6
zip_safe = False

[options.package_data]
* = *.txt, *.rst
cpkmodel = *.html *.png *.gif *js *jpg *jpeg *svg *py *mo *po

[sdist]
formats = zip

[bdist_wheel]
universal = 1
